# debug20

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: test.yml
external_dependecies/: CMakeLists.txt
src/: CMakeLists.txt
src/debug20/: CMakeLists.txt  assert.cpp  assert.hpp  backtrace.cpp  backtrace.hpp  call.hpp  exception.cpp  exception.hpp  log.cpp  log.hpp
src/source_location/: CMakeLists.txt  source_location.cpp  source_location.hpp
tests/: CMakeLists.txt
tests/test_asserts/: CMakeLists.txt  test_asserts.cpp
tests/test_backtracing/: CMakeLists.txt  test_backtrace.cpp
tests/test_logging/: CMakeLists.txt  test_logging.cpp
